Remove the EquationPrinter.java
Move exec-maven-plugin to controller/pom.xml